--- a/AV/radix.html
+++ b/AV/radix.html
@@ -73,8 +73,9 @@ form {
       </select>
 	  
 	  <!-- Number of Digits -->
+	 <label for="digitsize">&nbsp;Digits:&nbsp;</label> 
 	<select id="digitsize">
-	  <option selected value = 2> Digits </option>
+	  <option selected value = 2> 2 </option>
 	  <option value = 1> 1 </option>
 	  <option value = 2> 2 </option>
 	  <option value = 3> 3 </option>
@@ -195,12 +196,27 @@ form {
     $('#arraysize').val(theArray.length);
     return true;
   }
-
-
-  var setBlue = function(index) {
-    arr.css(index, {"background-color": "#bbf" });
+  
+   var setBlue = function(index) {
+    arr.css(index, {"background-color": "#ddf" });
   };
 
+
+  var setWhite = function(index) {
+    arr.css(index, {"background-color": "#F5FFF9" });
+  };
+
+  // Radixsort
+  function radsort() {
+    var i,j;
+    av.umsg("Sorting the subarray");
+    for (i=0; i<theArray.length; i++) {
+	arr.highlight([i]);
+	av.step();
+	setWhite(i);
+	
+		}
+  }
 
 
   
@@ -216,9 +232,10 @@ form {
 		
         theArray.length = 0; // Out with the old
         // Give random numbers in range 0..999
+		countArray[9] = 0; // need to change in order to represent count array
         for (i=0; i < ASize; i++) {
           theArray[i] = Math.floor(Math.random()*(Math.pow(10,DSize)));
-		  countArray[i] = 0; // need to change in order to represent count array
+		  
 		  outArray[i] = 0; // need to change in order to represent output array
         }
       }
@@ -228,10 +245,15 @@ form {
       reset(true); // Reset any previous visualization
       av = new JSAV("avcontainer"); // initialize JSAV ..
       // .. and the array. use the layout the user has selected
-      arr = av.ds.array(theArray, {indexed: true, layout: arrayLayout.val()});
-	  arr.highlight([0]);
-      arr = av.ds.array(countArray, {indexed: true, layout: arrayLayout.val()});
+	  
 	  arr = av.ds.array(outArray, {indexed: true, layout: arrayLayout.val()});
+	  arr = av.ds.array(countArray, {indexed: true, layout: arrayLayout.val()});
+      arr = av.ds.array(theArray, {indexed: true, layout: arrayLayout.val()});
+	  for (j=0; j < theArray.length; j++) {
+		
+		radsort(j);
+		}
+      
 	  
       av.umsg("Done sorting!");
       av.recorded(); // mark the end
