created first step display message and fixed array color issues

--- a/AV/radix.html
+++ b/AV/radix.html
@@ -209,7 +209,7 @@ form {
   // Radixsort
   function radsort() {
     var i,j;
-    av.umsg("Sorting the subarray");
+    av.umsg("Sorting Original array and making original values into indices in the count array");
     for (i=0; i<theArray.length; i++) {
 	arr.highlight([i]);
 	av.step();
