--- a/AV/radix.html
+++ b/AV/radix.html
@@ -134,7 +134,7 @@ form {
   var context = $("#ssperform");
   var emptyContent = $("#avcontainer").html();
   var av, // for JSAV av
-    arr;  // for the JSAV array
+    arr, arr2, arr3;  // for the JSAV array
 	
  
 	
@@ -208,23 +208,29 @@ form {
 
   // Radixsort
   function radsort() {
-    var i,j;
-    av.umsg("Sorting Original array and making original values into indices in the count array");
+    var i,k;
+    av.umsg("Sorting the subarray");
     for (i=0; i<theArray.length; i++) {
 	arr.highlight([i]);
+	arr2.highlight([theArray[i]%10])
+	countArray[i]= 1;
 	av.step();
-	setWhite(i);
+	arr.unhighlight([i]);
+	arr2.unhighlight([theArray[i]%10])
+	
+	
 	
 		}
   }
 
 
   
-  // Execute the "Run" button function
+// Execute the "Run" button function
   function runIt() {
-    var i;
+    var i,j,k;
     var newSize = $('#arraysize').val();
     var DSize = $('#digitsize').val();
+	var ASize = $('#arraysize').val();
     if (processArrayValues()) { // if it is false, we got junk user
                                 // needs to fix
       if (theArray.length === 0) { // Make a random  array
@@ -232,12 +238,16 @@ form {
 		
         theArray.length = 0; // Out with the old
         // Give random numbers in range 0..999
-		countArray[9] = 0; // need to change in order to represent count array
+		
         for (i=0; i < ASize; i++) {
           theArray[i] = Math.floor(Math.random()*(Math.pow(10,DSize)));
 		  
 		  outArray[i] = 0; // need to change in order to represent output array
         }
+		
+		for (k=0; k < 10; k++) {
+		countArray[k] = 0; // need to change in order to represent count array
+		}
       }
       else { // Use the values we got out of the user's list
         ASize = theArray.length;
@@ -246,14 +256,16 @@ form {
       av = new JSAV("avcontainer"); // initialize JSAV ..
       // .. and the array. use the layout the user has selected
 	  
-	  arr = av.ds.array(outArray, {indexed: true, layout: arrayLayout.val()});
-	  arr = av.ds.array(countArray, {indexed: true, layout: arrayLayout.val()});
-      arr = av.ds.array(theArray, {indexed: true, layout: arrayLayout.val()});
-	  for (j=0; j < theArray.length; j++) {
 		
+	  arr2 = av.ds.array(countArray, {indexed: true, layout: arrayLayout.val()});
+	  arr3 = av.ds.array(outArray, {indexed: true, layout: arrayLayout.val()});
+      arr = av.ds.array(theArray, {indexed: true, layout: arrayLayout.val()});
+	  for (j=0; j < ASize; j++) {
 		radsort(j);
 		}
       
+	  
+	  
 	  
       av.umsg("Done sorting!");
       av.recorded(); // mark the end
