--- a/AV/radix.html
+++ b/AV/radix.html
@@ -198,7 +198,7 @@ form {
   }
   
    var setBlue = function(index) {
-    arr.css(index, {"background-color": "#ddf" });
+    arr2.css(index, {"background-color": "#ddf" });
   };
 
 
@@ -209,7 +209,7 @@ form {
    // Radixsort
   function radsort() {
     var i,k;
-    av.umsg("Sorting the subarray"+ countArray[1]);
+    av.umsg("Counting occurances of values in original array");
     for (i=0; i<theArray.length; i++) {
 		arr.highlight([i]);
 		arr2.highlight([theArray[i]%10])
@@ -219,18 +219,28 @@ form {
 		if(countArray[theArray[i]%10]=== 0){
 			countArray[theArray[i]%10]= 1;
 			arr2.value(theArray[i]%10,1);
-			av.umsg("hi"+ countArray[7]);
 			}
 		else{
 			countArray[theArray[i]%10]= countArray[theArray[i]%10]+1;
 			arr2.value(theArray[i]%10,countArray[theArray[i]%10]);
 		}
   }
-  
+  av.umsg("Adding values in count Array");
+   for (k=0; k<10; k++) {
+		if(k!= 10){
+		countArray[k+1]= countArray[k]+countArray[k+1];
+		arr2.value(k,countArray[k]);
+		setBlue(k);
+		setBlue(k+1);
+		av.step();
+		arr2.unhighlight(k);
+		
+	}	
+  }
   }
 
   
-// Execute the "Run" button function
+  // Execute the "Run" button function
   function runIt() {
     var i,j,k;
     var newSize = $('#arraysize').val();
@@ -261,12 +271,13 @@ form {
       av = new JSAV("avcontainer"); // initialize JSAV ..
       // .. and the array. use the layout the user has selected
 	  
-		
 	  arr = av.ds.array(theArray, {indexed: true, layout: arrayLayout.val()});
 	  arr2 = av.ds.array(countArray, {indexed: true, layout: arrayLayout.val()});
 	  arr3 = av.ds.array(outArray, {indexed: true, layout: arrayLayout.val()});
 	  radsort(j);
 		
+      
+	  
       
 	  
 	  
