--- a/Exercises/FindMax.html
+++ b/Exercises/FindMax.html
@@ -2,7 +2,7 @@
 <html data-require="math">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Addition 1</title>
+  <title>FindMax</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 <script type="text/javascript"
@@ -13,45 +13,33 @@
   <script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" />
 
+<style>
+.jsavcontainer {
+  border: 0px;
+}
+</style>
+
 <body>
 <script>
-  var jsav, arr,
-  theArray = [],
-  max = 0;
+  var jsav, arr, max, myGuess, currPos;
   
   // function to handle a click event on an array
   var clickHandler = function(index, e) {
-    var HLcount = 0, HLpos = 0;
-    if (!arr.isHighlight(index)) {
-      arr.highlight(index);
-    } else {
-      arr.unhighlight(index);
-    }
-    // Figure out what the user has done, and report on it
-    for (i=0; i<10; i++) {
-      if (arr.isHighlight(i)) {
-        HLcount++;
-        HLpos = i;
-      }
-    }
-    if ((HLcount === 1) && (arr.isHighlight(HLpos)) &&
-        (theArray[HLpos] === max)) {
-      av.umsg("Clicked on " + index + ", max is " + max +
-              ", HLpos is " + HLpos + ": Now you have it!");
-    } else {
-      av.umsg("Clicked on " + index + ", max is " + max +
-              ", HLpos is " + HLpos + ": Not there yet.");
-    }
+    arr.unhighlight();
+    arr.highlight(index);
+    myGuess = arr.value(index);
+    currPos = index;
   }
 
   initJSAV = function(a) {
     var i;
-    jsav = new JSAV("jsav");
+    max = 0; // Must do these initializations each time the exercise initializes
+    myGuess = -1;
+    jsav = new JSAV("jsav", {"animationMode": "none"});
+    arr = jsav.ds.array(JSAV.utils.rand.numKeys(0, 999, a));
     for (i=0; i < a; i++) {
-      theArray[i] = Math.floor(Math.random()*1000);
-      if (theArray[i] > max) max = theArray[i];
+      if( arr.value(i) > max) max = arr.value(i);
     }
-    arr = jsav.ds.array(theArray, {indexed: true});
     // bind the clickHandler to handle click events on the array
     arr.click(clickHandler);
   }
@@ -72,13 +60,16 @@
     <div>
       <div class="question">
 	Click on the array element with the largest value.
-	<div id="jsav">
-	  <div class="jsavcanvas"></div>
-	  <p class="jsavoutput jsavline"></p>
-	</div>
+	<div id="jsav"></div>
       </div>
-      <div class="solution" data-forms="integer">
-	<var>CorrectAnswer</var>
+      <div class="solution" data-type="custom">
+	<div class="guess">
+	  [myGuess]
+	</div>
+	<div class="validator-function">
+	  if (guess[0] === -1) return ""; // user didn't give answer yet
+	  return (guess[0] === CorrectAnswer);
+	</div>
       </div>
       <div class="hints">
 	<p><var>CorrectAnswer</var></p>
