--- a/Exercises/HashJSAV.html
+++ b/Exercises/HashJSAV.html
@@ -10,10 +10,10 @@
 </script>
 	<script>urlBaseOverride = "../ODSAkhan-exercises/";</script>
 	<script src="../ODSAkhan-exercises/khan-exercise.js"></script>
-	<script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script>	
-	<script src="http://algoviz.org/OpenDSA/JSAV/lib/jquery.transform.light.js"></script>
+	<script src="../JSAV/build/JSAV-min.js"></script>	
+	<script src="../JSAV/lib/jquery.transform.light.js"></script>
 	<script type="text/javascript" src="../AV/Queue.js"></script>
-    <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" />
+    <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
 <body>
   
   <script type="text/javascript">
