--- a/Exercises/HashingMC.html
+++ b/Exercises/HashingMC.html
@@ -9,8 +9,8 @@
 </script>
   <script>urlBaseOverride = "../ODSAkhan-exercises/";</script>
   <script src="../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" />
+  <script src="../JSAV/build/JSAV-min.js"></script>
+  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
 </head>
 <body>
 
