Fixed smallnodes.html demo edge targets in Chrome

--- a/Demos/smallnodes.html
+++ b/Demos/smallnodes.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="http://algoviz.org/OpenDSA/dev/OpenDSA/JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
     <style>
     .jsavtree { margin-bottom: 30px; }
-    .jsavnode { width: 5px; height: 5px; background-color: black; }
+    .jsavnode { width: 5px; height: 5px; background-color: black; border-radius: 3px}
     .jsavvalue { display: inline-block; left: -22.5px; position: relative; text-align: center; top: -5px; width: 50px;}
     </style>
   </head>
