created "about" button

--- a/AV/radix.html
+++ b/AV/radix.html
@@ -147,7 +147,10 @@ form {
   $('input[name="run"]', context).click(runIt);
   $('input[name="reset"]', context).click(reset);
   
-
+function about() {
+    var mystring = "Radix Sort Algorithm Visualization\nWritten by ...\nCreated as part of the OpenDSA hypertextbook project.\nFor more information, see http://algoviz.org/OpenDSA\nWritten during Summer, 2012\nLast update: June, 2012\nJSAV library version " + JSAV.version();
+    alert(mystring);
+  }
 
 
 
