--- a/AV/Sorting/insertionsort-av.html
+++ b/AV/Sorting/insertionsort-av.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Insertion Sort AV</title>
-  <link rel="stylesheet" href="opendsaAV.css" type="text/css" />
-  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="insertionsort-av.css" type="text/css" />
 </head>
 
@@ -50,9 +50,9 @@
 <script
   src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
 </script>
-<script src="../JSAV/lib/jquery.transform.light.js"></script>
-<script src="../JSAV/lib/raphael.js"></script>
-<script src="../JSAV/build/JSAV-min.js"></script>
+<script src="../../JSAV/lib/jquery.transform.light.js"></script>
+<script src="../../JSAV/lib/raphael.js"></script>
+<script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="insertionsort-av.js"></script>
 </body>
 </html>
