--- a/AV/Sorting/bubblesort-av.html
+++ b/AV/Sorting/bubblesort-av.html
@@ -1,18 +1,19 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <title>Insertion Sort AV</title>
+  <title>Bubblesort AV</title>
   <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="quadraticsort.css" type="text/css" />
+
 </head>
 
 <body>
 <div id="container">
   <input type="button" id="about" name="about" value="About"
-         style="margin-top:10px;"/>
+	 style="margin-top:10px;"/>
   <a class="jsavsettings" href="#">Settings</a>
-  <h1 style="">Insertion Sort Visualization</h1>
+  <h1 style="">Bubble Sort Visualization</h1>
 
   <form id="ssperform">
     <p>
@@ -53,6 +54,6 @@
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
-<script src="insertionsort-av.js"></script>
+<script src="bubblesort-av.js"></script>
 </body>
 </html>
