--- a/AV/shellsort-av.html
+++ b/AV/shellsort-av.html
@@ -146,8 +146,7 @@ form {
 
   // Process About button: Pop up a message with an Alert
   function about() {
-    var mystring = "Shellsort Algorithm Visualization\nWritten by Cliff Shaffer and Ville Karavirta\nCreated as part of the OpenDSA hypertextbook project.\nFor more information, see http://algoviz.org/eBook\nWritten during August, 2011\nLast update: August 14, 2011\nJSAV library version " + JSAV.version();
-    alert(mystring);
+    alert("Shellsort Algorithm Visualization\nWritten by Cliff Shaffer and Ville Karavirta\nCreated as part of the OpenDSA hypertextbook project\nFor more information, see http://algoviz.org/OpenDSA\nSource and development history available at\nhttps://github.com/cashaffer/OpenDSA\nCompiled with JSAV library version " + JSAV.version());
   }
 
   // Process Reset button: Reinitialize the output textbox and the AV
